# meshops

./: .docstr.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: linter.yml  release.yaml  test.yml
src/readyplayerme/meshops/: __about__.py  __init__.py  image.py  material.py  mesh.py  types.py
src/readyplayerme/meshops/draw/: __init__.py  color.py  colormodes.py  image.py  rasterize.py
src/readyplayerme/texturesynthesis/: mesh.py
tests/: __init__.py  conftest.py
tests/mocks/: __init__.py  input-mesh.glb  input_mesh.glb  mock_data.py  no-material.glb  uv-seams.glb
tests/readyplayerme/meshops/: conftest.py  test_mesh.py
tests/readyplayerme/meshops/integration/: test_integration.py
tests/readyplayerme/meshops/unit/: conftest.py  test_colormodes.py  test_colors.py  test_image.py  test_mesh.py  test_rasterizer.py
tests/readyplayerme/texturesynthesis/: test_mesh.py
